test/ruby/test_call.rb
@@ -52,6 +52,7 @@ class TestCall < Test::Unit::TestCase
     assert_nil(o&.x)
     assert_nothing_raised(NoMethodError) {o&.x = 6}
     assert_nothing_raised(NoMethodError) {o&.x *= 7}
+    assert_nothing_raised(NoMethodError) {o&.x *= 8; [].each {}}
   end
 
   def test_safe_call_evaluate_arguments_only_method_call_is_made
